# HiTikZ

./: .gitignore  CMakeLists.txt  README.md  hitikz.desktop
cmake/: cmake_uninstall.cmake.in
resources/presets/10000000-0000-0000-0000-000000000001/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000002/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000003/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000004/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000005/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000006/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000007/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000008/: meta.json
resources/presets/10000000-0000-0000-0000-000000000009/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000010/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000011/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000012/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000013/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000014/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000015/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000016/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000017/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000018/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000019/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000020/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000021/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000022/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000023/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000024/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000025/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000026/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000027/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000028/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000029/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000030/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000031/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000032/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000033/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000034/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000035/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000036/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000037/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000038/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000039/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000040/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000041/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000042/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000043/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000044/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000045/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000046/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000047/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000048/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000049/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000050/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000051/: meta.json  snippet.tex
resources/presets/10000000-0000-0000-0000-000000000052/: meta.json  snippet.tex
resources/presets/20000000-0000-0000-0000-000000000001/: meta.json  snippet.tex
resources/presets/20000000-0000-0000-0000-000000000002/: meta.json  snippet.tex
resources/presets/20000000-0000-0000-0000-000000000003/: meta.json  snippet.tex
resources/templates/: default_circuit.tex  default_math.tex  default_physics.tex
src/: autostart_manager.cpp  autostart_manager.h  code_editor.cpp  code_editor.h  comma_list_completer.h  draft_recovery_dialog.cpp  draft_recovery_dialog.h  flow_layout.cpp  flow_layout.h  kde_global_shortcut.cpp  kde_global_shortcut.h  latex_compiler.cpp  latex_compiler.h  latex_compiler_convert.cpp  latex_compiler_extract.cpp  latex_compiler_wrap.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_compile.cpp  mainwindow_drafts.cpp  mainwindow_internal.h  mainwindow_params.cpp  mainwindow_shortcuts.cpp  mainwindow_tabs.cpp  pdf_preview_widget.cpp  pdf_preview_widget.h  search_panel.cpp  search_panel.h  search_panel_menus.cpp  search_panel_tags.cpp  settings_dialog.cpp  settings_dialog.h  snippet_manager.cpp  snippet_manager.h  snippet_manager_io.cpp  snippet_manager_search.cpp  snippet_properties_dialog.cpp  snippet_properties_dialog.h  tikz_completer.cpp  (+17 more)
tests/: test_autostart.cpp  test_completer.cpp  test_document_state.cpp  test_draft_recovery.cpp  test_draft_recovery_dialog.cpp  test_enhanced_highlighter.cpp  test_fixes.cpp  test_highlighter_regex.cpp  test_latex_compiler.cpp  test_multitab.cpp  test_packages_libraries.cpp  test_params.cpp  test_review_fixes.cpp  test_search.cpp  test_snippet_manager.cpp  test_tex_import.cpp
(+568 files in other folders)
